fix: improve hotkey input alignment

--- a/src/utils/BytmDialog.css
+++ b/src/utils/BytmDialog.css
@@ -318,11 +318,12 @@
   border: 1px solid #777;
   border-radius: 5px;
   box-shadow: inset 0 -2px 0 #515559;
-  transition: padding 0.1s var(--bytm-easing), box-shadow 0.1s var(--bytm-easing);
+  transition: padding 0.1s var(--bytm-easing), margin-top 0.1s var(--bytm-easing), box-shadow 0.1s var(--bytm-easing);
 }
 
 .bytm-markdown-container kbd:active, .bytm-kbd:active {
   padding-bottom: 2px;
+  margin-top: 2px;
   box-shadow: inset 0 0 0 initial;
 }
 
