--- a/src/utils/hotkeyInput.css
+++ b/src/utils/hotkeyInput.css
@@ -12,6 +12,5 @@
 
 .bytm-hotkey-info {
   font-size: 0.9em;
-  margin-right: 5px;
   white-space: nowrap;
 }
